Alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -2319,7 +2319,7 @@ background-position-y: bottom;
     color: #ffff;
     display: flex;
     align-items: center;
-    margin-left: 80px;
+    margin-left: 85px;
     margin-bottom: 10px;
     font-size: 14px;
   }
@@ -2431,7 +2431,7 @@ background-position-y: bottom;
   /* line 67, ../../01 cl html template/03_jun 2019/182_medico_html/sass/_doctor_list.scss */
   .doctor_part .single_blog_item h3 {
     margin-bottom: 10px !important;
-    margin-left: 75px;
+    margin-left: 85px;
   }
   .doctor_part .single_blog_item p{
     font-family: 'Averia Serif Libre', cursive;
